# temporalite

./: .gitignore  BUILD.bazel  WORKSPACE  go.mod  go.sum  server.go
cmd/temporalite/: BUILD.bazel
internal/copyright/: BUILD.bazel
internal/examples/helloworld/: BUILD.bazel
internal/examples/mtls/: BUILD.bazel
internal/liteconfig/: BUILD.bazel
temporaltest/: BUILD.bazel  server_test.go
