load("@io_bazel_rules_go//go:def.bzl", "go_library")

# gazelle:exclude pkg/
# gazelle:exclude .git/
# gazelle:prefix github.com/temporalio/temporalite

# gazelle:resolve proto proto google/api/httpbody.proto @googleapis//google/api:httpbody_proto
# gazelle:resolve proto go    google/api/httpbody.proto @org_golang_google_genproto_googleapis_api//httpbody:go_default_library
# gazelle:resolve proto proto google/rpc/errdetails.proto @googleapis//google/rpc:errdetails_proto
# gazelle:resolve proto go    google/rpc/errdetails.proto @org_golang_google_genproto_googleapis_rpc//errdetails:go_default_library
# gazelle:resolve proto proto google/rpc/status.proto @googleapis//google/rpc:status_proto
# gazelle:resolve proto go    google/rpc/status.proto @org_golang_google_genproto_googleapis_rpc//status:go_default_library
# gazelle:resolve proto proto google/rpc/status.proto @googleapis//google/rpc:status_proto
# gazelle:resolve proto go    google/rpc/status.proto @org_golang_google_genproto_googleapis_rpc//status:go_default_library
exports_files(
    srcs = ["go.mod"],
)

load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-prune",
    ],
    command = "update-repos",
)

# To export the file, run:
#
# `bazel run //:example-export.publish --define "maven_repo=file://$(pwd)/repository"`
#
# GPG signing will be enabled if you also define `gpg_sign=true`, `maven_user`, and
# `maven_password`

# java_export(
#     name = "example-export",
#     maven_coordinates = "com.example:bazel-example:0.0.1",
#     runtime_deps = [
#         "//src/main/java/com/example",
#     ],
# )

go_library(
    name = "temporalite",
    srcs = [
        "options.go",
        "server.go",
    ],
    importpath = "github.com/temporalio/temporalite",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/liteconfig",
        "@io_temporal_go_sdk//client",
        "@io_temporal_go_server//common/authorization",
        "@io_temporal_go_server//common/config",
        "@io_temporal_go_server//common/dynamicconfig",
        "@io_temporal_go_server//common/log",
        "@io_temporal_go_server//schema/sqlite",
        "@io_temporal_go_server//temporal",
    ],
)
