load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "lib",
    srcs = [
        "main.go",
        "ui.go",
    ],
    importpath = "",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_temporalio_temporalite//:go_default_library",
        "@com_github_temporalio_temporalite//internal/liteconfig:go_default_library",
        "@com_github_temporalio_ui_server_v2//plugins/fs_config_provider:go_default_library",
        "@com_github_temporalio_ui_server_v2//server:go_default_library",
        "@com_github_temporalio_ui_server_v2//server/config:go_default_library",
        "@com_github_temporalio_ui_server_v2//server/server_options:go_default_library",
        "@com_github_urfave_cli_v2//:go_default_library",
        "@io_temporal_go_server//common/config:go_default_library",
        "@io_temporal_go_server//common/dynamicconfig:go_default_library",
        "@io_temporal_go_server//common/headers:go_default_library",
        "@io_temporal_go_server//common/log:go_default_library",
        "@io_temporal_go_server//common/persistence/sql/sqlplugin/sqlite:go_default_library",
        "@io_temporal_go_server//temporal:go_default_library",
        "@org_uber_go_zap//:go_default_library",
        "@org_uber_go_zap//zapcore:go_default_library",
    ],
)

go_binary(
    name = "temporalite",
    embed = [":temporalite_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "lib_test",
    srcs = [
        "main_test.go",
        "mtls_test.go",
        "ui_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":lib"],
    deps = [
        "@com_github_temporalio_temporalite//internal/liteconfig:go_default_library",
        "@com_github_urfave_cli_v2//:go_default_library",
        "@io_temporal_go_api//enums/v1:go_default_library",
        "@io_temporal_go_api//workflowservice/v1:go_default_library",
        "@io_temporal_go_sdk//client:go_default_library",
    ],
)

go_library(
    name = "temporalite_lib",
    srcs = [
        "main.go",
        "ui.go",
    ],
    importpath = "github.com/temporalio/temporalite/cmd/temporalite",
    visibility = ["//visibility:private"],
    deps = [
        "//:temporalite",
        "//internal/liteconfig",
        "@com_github_temporalio_ui_server_v2//plugins/fs_config_provider",
        "@com_github_temporalio_ui_server_v2//server",
        "@com_github_temporalio_ui_server_v2//server/config",
        "@com_github_temporalio_ui_server_v2//server/server_options",
        "@com_github_urfave_cli_v2//:cli",
        "@io_temporal_go_server//common/config",
        "@io_temporal_go_server//common/dynamicconfig",
        "@io_temporal_go_server//common/headers",
        "@io_temporal_go_server//common/log",
        "@io_temporal_go_server//common/persistence/sql/sqlplugin/sqlite",
        "@io_temporal_go_server//temporal",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
    ],
)

go_test(
    name = "temporalite_test",
    srcs = [
        "main_test.go",
        "mtls_test.go",
        "ui_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":temporalite_lib"],
    deps = [
        "//internal/liteconfig",
        "@com_github_urfave_cli_v2//:cli",
        "@io_temporal_go_api//enums/v1:enums",
        "@io_temporal_go_api//workflowservice/v1:workflowservice",
        "@io_temporal_go_sdk//client",
    ],
)
