load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "liteconfig",
    srcs = [
        "config.go",
        "freeport.go",
    ],
    importpath = "github.com/temporalio/temporalite/internal/liteconfig",
    visibility = ["//:__subpackages__"],
    deps = [
        "@io_temporal_go_server//common/cluster",
        "@io_temporal_go_server//common/config",
        "@io_temporal_go_server//common/dynamicconfig",
        "@io_temporal_go_server//common/log",
        "@io_temporal_go_server//common/metrics",
        "@io_temporal_go_server//common/persistence/sql/sqlplugin/sqlite",
        "@io_temporal_go_server//temporal",
    ],
)
